--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Run build-wrapper
         run: |
           mkdir build
-          # cmake -S . -B build
-          #build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} make clean all
+          cmake -S . -B build
+          #build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} cmake --build build/ --config Release
      # - name: Run tests to generate coverage statistics
        # run: |
          # ./build/coverage_test1
